# financial-crisis-ews

./: .gitignore  240377687_Nakshatra_aditya(Jupyter).ipynb  README.md  pyproject.toml  requirements.txt
app/: 240377687_Nakshatra_aditya(Jupyter) (1).ipynb  streamlit_app.py
src/financial_crisis_ews/: config.py  data.py  evaluate.py  evaluation.py  features.py  io.py  model.py  pipeline.py  train.py
